fixed padding on mobile

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,6 +6,10 @@
   .exchange-button {
     text-align: center;
   }
+  .blue-gradient-button {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
