--- a/app/assets/stylesheets/pages/_new_listing.scss
+++ b/app/assets/stylesheets/pages/_new_listing.scss
@@ -6,6 +6,7 @@
     // opacity: 1;
     flex-grow: 2;
     margin-top: 0;
+    padding: 2em;
     transform: translateX(0);
     height: 100vh;
   }
@@ -17,6 +18,7 @@
     text-overflow: ellipsis;
     max-width: 100%;
   }
+
 }
 
 @media (min-width: 600px) and (max-width: 767px) {
@@ -29,6 +31,7 @@
     margin-top: 2em;
     margin-bottom: 2em;
   }
+
   .listing-container {
     // align-items: center;
   }
@@ -82,6 +85,9 @@
   fill: $yellow;
 }
 
+.currency-span h3 {
+  font-size: 1.5em;
+}
 
 .currency-span {
   background-color: rgba(139 ,136, 248, 49);
